--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 					<section class="intro">
 						<header>
 							<h1>101 Courses</h1>
-							<p>Free courses brought to you by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
-							<ul class="actions">
+							<p>Free courses brought to you by <a href="https://twitter.com/roccoghielmini">@roccoghielmini</a> / <a href="https://twitter.com/kunsachdeva">@kunsachdeva</a></p>
+							<!-- <ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
+							</ul> -->
 						</header>
 						<div class="content">
 							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
@@ -25,7 +25,7 @@
 					</section>
 
 				<!-- Section -->
-					<section id="first">
+					<!-- <section id="first">
 						<header>
 							<h2>Magna sed nullam nisl adipiscing</h2>
 						</header>
@@ -33,10 +33,10 @@
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Feugiat consequat tempus ultrices</h2>
 						</header>
@@ -52,17 +52,16 @@
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Ultrices erat magna sed condimentum</h2>
 						</header>
 						<div class="content">
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>Erat aliquam</h3>
@@ -78,7 +77,6 @@
 									</div>
 								</section>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>Nisl consequat</h3>
@@ -93,7 +91,6 @@
 									</div>
 								</section>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>Lorem gravida</h3>
@@ -109,10 +106,10 @@
 								</section>
 
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -123,7 +120,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -394,7 +391,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				-->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Get in touch</h2>
 						</header>
@@ -444,10 +441,10 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 							</ul>
 						</footer>
-					</section>
+					</section> -->
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<!-- <div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div> -->
 
 			</div>
 
