--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div id="wrapper">
 					<section class="intro">
 						<header>
-							<h1>101 Courses</h1>
+							<img src="images/101.png" alt="" />
 							<p>Free courses brought to you by <a href="https://twitter.com/roccoghielmini">@roccoghielmini</a> / <a href="https://twitter.com/kunsachdeva">@kunsachdeva</a></p>
 							<!-- <ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
