--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/101.ico" type="image/gif" sizes="32x32">
+
 	</head>
 	<body class="is-preload">
 
